7/30/2006 - jdiamond
====================

 * (trac #13) - Made the page loader more efficient by only loading the class file for the page being requested

7/29/2006 - jdiamond
====================

 * (trac #84) - Added an install script

7/23/2006 - jdiamond
====================

 * Fixed a bug causing orders for a hosting service with term != 1 month to be $0

7/22/2006 - jdiamond
====================

 * Added a login page for the order interface (for repeat customers)
 * (trac #88) - Implemented per-user language preferences.

7/20/2006 - jdiamond
====================

 * Added order notification and confirmation e-mails.  You can customize them through the Settings page.
 * Removed the expiration date from the hosting services page.  With auto-recurring now supported in the invoice
   code, this is no longer necessary.
 * Added a "contact registrar" button to the edit/renew domain page
 * (trac #21, #71) The billing & invoices code was cleaned up and a few bugs relating to past purchases being 
   billed correctly were fixed.

  *** PLEASE NOTE: this commit contains a new database scheme ***

7/15/2006 - jdiamond
====================

 * (trac #23) Add sub-total and tax-total to invoices.

7/14/2006 - jdiamond
====================

 * (trac #73) Fixed a foreach() warning that resulted when deleting invoices.
 * (trac #64) Fixed a bug that was causing empty invoices to be generated in batch.
 * (trac #87) Fixed a database bug that was truncating tax rule's > 9.99%
 * Moved the database SQL from manager/db/ to sql/
 * (trac #74) Replaced hard-coded $ symbols in the printed/e-mail invoice
 * (trac #25) Fixed a number of hard-coded english phrases

7/13/2006 - jdiamond
====================

 * (trac #60) Completed work on an Authorize.net module.
 * Fixed an undocumented bug involving invalid payment type's when receiving a payment manually

7/8/2006 - jdiamond
====================
