@@ -815,7 +815,7 @@
                description="[USERNAME]"
                validate="true"
                required="true"
-               max_length="10"
+               max_length="32"
                min_length="3"/>
         <field name="password"
                type="password"
@@ -2997,7 +2997,7 @@
                description="[USERNAME]"
                validate="true"
                required="true"
-               max_length="10"
+               max_length="32"
                min_length="3"/>
         <field name="password"
                type="password"
@@ -3653,7 +3653,7 @@
                description="[USERNAME]"
                validate="true"
                required="false"
-               max_length="255"
+               max_length="32"
                min_length="1"/>
         <field name="firstname"
                type="text"
