@@ -10,7 +10,7 @@
  * @license http://www.opensource.org/licenses/gpl-license.php GNU Public License
  */
 
-require_once $base_path . "solidworks/Page.class.php";
+require_once $base_path . "solidworks/AdminPage.class.php";
 
 require_once $base_path . "DBO/ServerDBO.class.php";
 
@@ -22,7 +22,7 @@ require_once $base_path . "DBO/ServerDBO.class.php";
  * @package Pages
  * @author John Diamond <jdiamond@solid-state.org>
  */
-class AddServerPage extends Page
+class AddServerPage extends AdminPage
 {
   /**
    * Initialize AddServer Page
