@@ -13,6 +13,8 @@
 // Include the parent class
 require_once $base_path . "solidworks/AdminPage.class.php";
 
+require_once $base_path . "DBO/HostingServiceDBO.class.php";
+
 /**
  * EditHostingServicePage
  *
